Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • mesa mesa
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 3,068
    • Issues 3,068
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 1,000
    • Merge requests 1,000
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • MesaMesa
  • mesamesa
  • Issues
  • #4422
Closed
Open
Issue created Mar 10, 2021 by Martin Stransky@stransky

Radeon/dmabuf - crash when dmabuf buffers are mapped/unmapped from various threads

Fedora 33 / mesa-dri-drivers-20.3.4-2.fc33.x86_64

I'm experiencing crashes in mesa-dri code (u_threaded_context.c) while multiple dmabuf buffers are mapped/unmapped from various threads. This happens when video is decoded to multiple dmabuf buffers.

Backtrace is available here: https://bugzilla.mozilla.org/show_bug.cgi?id=1661572#c11

This is clearly reproducible on radeon drivers only, I can't reproduce it on Intel drivers.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking