Bug 1661572 [Linux] Protect dmabuf map/unmap operations by mutex to workaround Mesa multi-threading issue, r=jgilbert

See https://gitlab.freedesktop.org/mesa/mesa/-/issues/4422 for details. Mesa/radeon can't handle multiple map/unmap operations so protect it by lock.

Differential Revision: https://phabricator.services.mozilla.com/D107979